# Langchain-Hackathon

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  database.py  logging_config.py  main.py  schemas.py
app/agents/: langchain_qa.py
app/collectors/: __init__.py  base.py  generic.py  hackernews.py  medium.py  rss.py  twitter.py  youtube.py
app/processors/: __init__.py  embeddings.py  summarizer.py
app/routes/: content.py  feeds.py  health.py  qa.py  ui.py
app/services/: collection_service.py  content_pipeline.py  retrieval.py  tavily.py
app/web/: app.js  index.html  styles.css
